Fixing choose file button and label are misaligned

--- a/app/styles/less/modal.less
+++ b/app/styles/less/modal.less
@@ -366,6 +366,10 @@ label {
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
   border: 0;
   border-radius: 0;
+
+  &.file-selector {
+    padding-top: 4px;
+  }
 }
 
 .has-error .help-block,
